--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,18 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@font-face { /* importando minha fonte*/
+  font-family: 'RobotoMono';
+  src: url('./fonts/RobotoMono-Thin.ttf');
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* { /* com astericos eu estou aplicando a todos os meus componentes*/
+  font-family: 'RobotoMono', monospace; /* caso não achar a RobotoMono usa a monospace*/
+}
+
+body {
+  display: flex;
+  height: 100vh; /* usando essa unidade pego a altura completa*/
+  justify-content: center;
+  align-items: center; /* com esse item e o de cima, coloco meu objeto bem no meio da tela*/
+  text-align: center;
+  background: linear-gradient(to right, rgb(83, 105, 118), rgb(41, 46, 70));
+  color: #fff /* cor do meu texto*/
 }
